--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 <!-- Body Content -->  
     <div class="container-fluid">
       <div>
-        <img src="assets/wedding_card.png">
+        <img src="assets/wedding_card1.png">
     </div>
     </div>
 
